# ot-ti

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  boards.cmake
docs/: ti-openthread-release-notes.md
docs/thread-migration-guide/: thread-cc2674-migration.md  thread-migration.md
docs/thread-syscfg/: getting-started.md  sysconfig-board.md
docs/thread-users-guide/: ti-openthread-application-development.md  ti-openthread-borderrotuer-setup-guide.md  ti-openthread-example-apps.md  ti-openthread-ncp-interface.md  ti-openthread-overview.md  ti-openthread-product-certification.md  ti-openthread-thread-protocol.md
docs/thread-users-guide/resources/: draw-tiop-application-architecture.xml
examples/: CMakeLists.txt  README.md
examples/apps/: CMakeLists.txt
examples/apps/cli/: CMakeLists.txt  Logger.h  README.md  bleAppTask.c  bleAppTask.h  bleStackApp.h  bleStackMenu.c  bleStack_menu.h  cli_uart.cpp  freertos_main.c  ftd.cmake  main.c  mtd.cmake  radio.cmake  tirtos_main.c
examples/apps/ncp/: CMakeLists.txt  freertos_main.c  ftd.cmake  main.c  mtd.cmake  tirtos_main.c
examples/apps/rcp/: CMakeLists.txt  README.md  freertos_main.c  main.c  rcp.c  rcp.cmake
script/: bootstrap  build  release
src/: CC2674.syscfg  CMakeLists.txt  FreeRTOSConfig.h  alarm.c  alarm_micro.c  arm-none-eabi-m33.cmake  arm-none-eabi-m4f.cmake  diag.c  dmm_scheduler.c  entropy.c  misc.c  ncp_spi_mux.cpp  ncp_spi_mux.hpp  nli_mux.h  nvocmp.c  openthread-core-cc13xx_cc26xx-config-check.h  openthread-core-cc13xx_cc26xx-config-matter.h  openthread-core-cc13xx_cc26xx-config-spi.h  openthread-core-cc13xx_cc26xx-config-thci.h  openthread-core-cc13xx_cc26xx-config.h  openthread.syscfg  openthread_orig.syscfg  radio.c  radio.h  region_settings.h  settings.c  spi_periph.c  spi_periph_config.h  system.c  system.h  uart.c
src/otsupport/: otrtosapi.c  otrtosapi.h
